# deepwiki-open

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile-ollama-local  HANDBOOK.md  HANDOFF.md  Ollama-instruction.md  README.md  README.zh.md  next.config.ts  package.json  tailwind.config.js  tsconfig.json
.claude/rules/: docs-index.md
.codex/: rules
api/: api.py  ast_chunk_poc.py  chat_history.py  config.py  contracts.py  data_pipeline.py  dual_index_ast_demo.py  knowledge_store.py  pr_analysis.py  prompts.py  pyproject.toml  rag.py  rag_cache.py  retriever.py  simple_chat.py  websocket_wiki.py
api/agent/: __init__.py  chat_handler.py  config.py  filtered_tools.py  handler_utils.py  loop.py  message.py  provider.py  stream_events.py  wiki_generator.py
api/config/: embedder.json  generator.json
api/routers/: __init__.py  capabilities.py  graph.py  indexing.py  repos.py
api/services/: __init__.py  graph_service.py  indexing_service.py  repo_service.py
api/tools/: __init__.py  ast_splitter.py  bash.py  bash.txt  glob.py  glob.txt  grep.py  grep.txt  ls.py  ls.txt  rag.py  rag.txt  read.py  read.txt  task.py  task.txt  todo.py  todo.txt  tool.py
api/utils/: filters.py  repo_tree.py
benchmark/: llm-as-a-judge.py  llm_as_a_judge.py  problems.md  run.sh  run_benchmark.py
cli/: deepwiki_cli.py
docs/: bottleneck.md  deepwiki-open-bottleneck.md  deepwiki-open-rag.md  frontend-backend-apis-cn.md  frontend-backend-apis.md  index.json  index.md
handbooks/: index.json  index.md
scrips/: check_chunk.py
test/: test_agent_message.py
(+155 files in other folders)
